deployment/memcached-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: wordpress
  labels:
    app: memcached
    tier: backend
spec:
  ports:
    - port: 11211
      targetPort: 11211
      #name: http
      protocol: TCP
  selector:
    app: memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: wordpress
  labels:
    app: memcached
    tier: backend
spec:
  selector:
    matchLabels:
      app: memcached
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: memcached
        tier: backend
    spec:
      imagePullSecrets:
        - name: registry-mp
      containers:
      - image: bitnami/memcached:latest
        name: memcached
        ports:
        - containerPort: 11211
          name: memcached
