deployment/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      #name: http
  selector:
    app: nginx
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    visualize: "true"
spec:
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
        visualize: "true"
    spec:
      imagePullSecrets:
        - name: registry-mp
      containers:
      - image: registry.docker.planejamento.gov.br/wordpress_template/wordpress/nginx/nginx:1.0.1
        name: nginx
        ports:
        - containerPort: 80
          name: nginx
---
