deployment/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: wordpress
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    visualize: "true"
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        visualize: "true"
    spec:
      imagePullSecrets:
        - name: registry-mp
      containers:
      - image: registry.docker.planejamento.gov.br/wordpress_template/wordpress/wordpress/wordpress:1.0.1
        name: wordpress
        ports:
        - containerPort: 9000
          name: wordpress
