deployment/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-route
spec:
  host: nginx.wordpress.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 200
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: memcached
  namespace: wordpress
spec:
  host: memcached
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 6s
      http:
        http2MaxRequests: 33
        maxRequestsPerConnection: 65
        maxRetries: 4
        http1MaxPendingRequests: 14
    outlierDetection:
        consecutiveErrors: 7
        interval: 8ms
        baseEjectionTime: 1m
        maxEjectionPercent: 11 
    tls:
      mode: ISTIO_MUTUAL
---
